<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScene"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/yellow"/>

        <TextView
            android:layout_marginStart="70dp"
            android:id="@+id/total_questions"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/question"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/yellow"/>
    </LinearLayout>

    <!-- Time -->
    <TextView
        android:id="@+id/time"
        android:layout_width="170dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="80dp"
        android:text="@string/time"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/yellow"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="170dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_height="80dp"
        android:text="@string/display_question"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center" />


    <EditText
        android:id="@+id/input"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:hint="@string/enter_answer_here"
        android:inputType="text"
        android:layout_marginTop="80dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_question"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/yellow"
        android:text="@string/enter"
        android:layout_marginTop="120dp"
        android:textStyle="bold"
        android:textSize="40sp"/>
</LinearLayout>